// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders correctly 1`] = `
<div>
  <nav
    className="navbar navbar-expand-lg navbar-light bg-light"
  >
    <div
      className="container-fluid px-4 mx-3"
    >
      <span
        className="d-flex align-items-center flex-grow-1 navbar-brand"
      >
        <img
          alt="space traveller hub logo"
          src="space-hub-logo.png"
          style={
            Object {
              "width": "75px",
            }
          }
        />
        <p>
          Space Travelers' Hub
        </p>
      </span>
      <button
        aria-controls="basic-navbar-nav"
        aria-label="Toggle navigation"
        className="navbar-toggler collapsed"
        onClick={[Function]}
        type="button"
      >
        <span
          className="navbar-toggler-icon"
        />
      </button>
      <div
        aria-expanded={null}
        className="justify-content-end navbar-collapse collapse"
        id="basic-navbar-nav"
      >
        <nav>
          <a
            aria-current="page"
            className="nav-item active"
            href="/"
            onClick={[Function]}
          >
            <span
              className="nav-link-text"
            >
              Rockets
            </span>
          </a>
          <span
            className="separator"
          >
             | 
          </span>
          <a
            className="nav-item"
            href="/missions"
            onClick={[Function]}
          >
            <span
              className="nav-link-text"
            >
              Missions
            </span>
          </a>
          <span
            className="separator"
          >
             | 
          </span>
          <a
            className="nav-item"
            href="/myprofile"
            onClick={[Function]}
          >
            <span
              className="nav-link-text"
            >
              My Profile
            </span>
          </a>
        </nav>
      </div>
    </div>
  </nav>
  <div>
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100vh",
          "justifyContent": "center",
          "paddingBottom": "20%",
          "width": "100%",
        }
      }
    >
      <div
        className="spinner-border text-warning"
        role="status"
      >
        <span
          className="sr-only"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`NavBar page renders correctly 1`] = `
<nav>
  <a
    aria-current="page"
    className="nav-item active"
    href="/"
    onClick={[Function]}
  >
    <span
      className="nav-link-text"
    >
      Rockets
    </span>
  </a>
  <span
    className="separator"
  >
     | 
  </span>
  <a
    className="nav-item"
    href="/missions"
    onClick={[Function]}
  >
    <span
      className="nav-link-text"
    >
      Missions
    </span>
  </a>
  <span
    className="separator"
  >
     | 
  </span>
  <a
    className="nav-item"
    href="/myprofile"
    onClick={[Function]}
  >
    <span
      className="nav-link-text"
    >
      My Profile
    </span>
  </a>
</nav>
`;
